--- a/package.json
+++ b/package.json
@@ -8,15 +8,22 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+ssh://git@github.com/simors/lvyii_engine.git"
+    "url": "https://github.com/simors/lvyii_engine.git"
   },
   "keywords": [
-    "express;engine"
   ],
   "author": "lvyii",
-  "license": "GPL",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/simors/lvyii_engine/issues"
   },
-  "homepage": "https://github.com/simors/lvyii_engine#readme"
+  "homepage": "https://github.com/simors/lvyii_engine#readme",
+  "devDependencies": {
+    "express": "^4.16.2"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.2",
+    "connect": "^3.6.5",
+    "connect-timeout": "^1.9.0"
+  }
 }
