--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
   },
   "homepage": "https://github.com/simors/lvyii_engine#readme",
   "devDependencies": {
-    "express": "^4.16.2"
+    "express": "^4.16.2",
+    "mocha": "^4.0.1",
+    "should": "^13.1.3",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "body-parser": "^1.18.2",
     "connect": "^3.6.5",
     "connect-timeout": "^1.9.0",
+    "debug": "^3.1.0",
     "lvyii_cors_headers": "^0.0.3",
     "underscore": "^1.8.3"
   }
