--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lvyii_engine",
+  "name": "lvyii-engine",
   "version": "0.0.2",
   "description": "Cloud Engine middleware for Lvyii",
   "main": "index.js",
